# opentui-resources

./: .gitignore  INDEX.md  README.md  install-skills.sh
demos_examples_learning_projects/niri-tui/: .gitignore  AGENTS.md  SPEC.md  opencode-sdk-reference.md  package.json  tsconfig.json
demos_examples_learning_projects/opentui-node-demo/: README.md  index.js  package-lock.json  package.json  react.jsx  tsconfig.json
demos_examples_learning_projects/opentui-simple-todo/: CLAUDE.md  README.md  package.json
demos_examples_learning_projects/playground_opentui/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
demos_examples_learning_projects/test-opentui-signal/: package.json
extras/openTui_mcp_server/: .gitignore  Dockerfile  README.md  config.yaml  go.mod  go.sum
extras/opentui/: gap-analysis.md  package.json
extras/opentui-web/: .gitignore  README.md  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
extras/opentuish/: README.md  inventory.yaml  main.py  requirements.txt  scenarios.yaml
open_tui_libraries_components_/anscribe/: .gitignore  AGENTS.md  (+5 more)
real_world_apps/lazymem/src-rust/: Cargo.toml
real_world_apps/lazymem/src-rust/src/: app.rs  layout.rs  lib.rs  main.rs  state.rs
real_world_apps/lazymem/src-rust/src/bench/: report.rs
real_world_apps/lazymem/src-rust/src/collector/: docker.rs  mod.rs  processes.rs  sessions.rs  snapshot.rs  system.rs  tmux.rs
real_world_apps/lazymem/src-rust/src/ui/: mod.rs
real_world_apps/lazymem/src-rust/tests/: collector_parsers.rs
skills/: REFERENCES.md  SKILLS_INDEX.md
(+1908 files in other folders)
